--- a/index.html
+++ b/index.html
@@ -148,17 +148,15 @@
             <h2>Contact Me</h2>
             <form action="" class="contact_form">
                 <div class="contact_field">
-                    <label for="name">Name</label>
-                    <input type="text" placeholder=" Please type your name" class="contact_input">
+                    <input type="text" placeholder="Name" class="contact_input">
                 </div>
 
                 <div class="contact_field">
-                    <label for="email">Email</label>
-                    <input type="email" placeholder=" Please type your email" class="contact_input">
+                    <input type="email" placeholder="Email" class="contact_input">
                 </div>
 
                 <div class="contact_field" id="message_container">
-                    <label for="message">Your Message</label>
+                    <label for="message">Message</label>
                     <textarea name="" id="contact_message" cols="50" rows="5"></textarea>
                 </div>
 
