added mobile responsivness

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     <li><a href="#home">HOME</a></li>
                     <li><a href="#my_projects">MY PROJECTS</a></li>
                     <li><a href="#contact_section">CONTACT</a></li>
-                    <li><img src="images/hamburger_icon.png" alt=""></li>
+                    <li></li>
                 </ul>
+                <img src="images/hamburger_icon.png" alt="">
             </nav>
         </div>
     </header>
