added project page for 1 & 2

--- a/index.html
+++ b/index.html
@@ -80,22 +80,19 @@
                 <div class="project_card_img"><img src="images/basketball.jpg" alt=""></div>
 
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 1</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore.
+                    <h3 class="project_card_title">Basketball League Login Page</h3>
+                    <p> A clean and modern login page for a summer basketball league.
                         <p />
-                        <button class="button_styling"><a href="landingPage_1.html">Click here to go to the landing
-                                page!</a></button>
+                        <button class="button_styling"><a href="project_page1.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card" id="project_card2">
                 <div class="project_card_img"><img src="images/coding_background.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 2</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore.
-                        <p />
-                        <button class="button_styling"><a href="landingPage2.html">Click here to go to the landing
-                                page!</a></button>
+                    <h3 class="project_card_title">Coding Course Sign Up</h3>
+                    <p>A sign up page for a a new and exciting coding bootcamp.<p/>
+                    <button class="button_styling"><a href="landingPage2.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -113,7 +110,7 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 1</h3>
+                    <h3 class="project_card_title">Project 4</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
                         asperiores, et officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe
                         accusantium quis aliquam.</p>
@@ -123,7 +120,7 @@
             <div class="project_card" id="project_card5">
                 <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 2</h3>
+                    <h3 class="project_card_title">Project 5</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
                         asperiores, et
                         officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe accusantium quis
@@ -134,7 +131,7 @@
             <div class="project_card">
                 <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 3</h3>
+                    <h3 class="project_card_title">Project 6</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
                         asperiores, et
                         officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe accusantium quis
