--- a/landingPage_2.html
+++ b/landingPage_2.html
@@ -12,17 +12,16 @@
     <div class="container">
         <div class="contrast_layer"></div>
         <div class="content">
-            <h2 class="lp_content">You're in a Good Place to Be!</h2>
-            <p class="lp_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati molestias non
-                asperiores vel reiciendis. Numquam aperiam, quia commodi odio ut facere repellat nobis quibusdam
-                aliquam, cumque cum, est iure voluptates?</p>
+            <h2 class="lp_content">Come join our coding bootcamp!</h2>
+            <p class="lp_content">Learn the latest coding skills with our wide range of course options, from full-stack
+                to cybersecurity and everything in between.</p>
             <form action="" class="lp_form">
-                <input type="text" name="" id="" placeholder="Please type your name" class="form_input">
-                <input type="email" name="" id="" placeholder=" Please type your email" class="form_input">
+                <input type="text" name="" id="" placeholder="Name" class="form_input">
+                <input type="email" name="" id="" placeholder="Email" class="form_input">
                 <input type="submit" value="Submit" class="form_submit">
             </form>
             <div class="social_section">
-                <h4>Follow me on Social Media</h4>
+                <h4>Follow us on social media!</h4>
                 <div class="social_icons">
                     <img src="images/fb_icon.png" alt="">
                     <img src="images/insta_icon.png" alt="">
