--- a/landingPage_1.html
+++ b/landingPage_1.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="login_container">
         <div class="side_image"><img src="images/basketball.jpg" alt=""></div>
         <div class="login">
             <h2>Login</h2>
