--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3 class="project_card_title">Basketball League Login Page</h3>
                     <p> A clean and modern login page for a summer basketball league.
                         <p />
-                        <button class="button_styling"><a href="project_page1.html">Project Page</a></button>
+                        <button class="button_styling"><a href="project1/project_page1.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -92,18 +92,19 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
                     <p>A sign up page for a a new and exciting coding bootcamp.<p/>
-                    <button class="button_styling"><a href="landingPage2.html">Project Page</a></button>
+                    <button class="button_styling"><a href="project2/project_page2.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
+                <div class="project_card_img"><img src="images/lion.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 3</h3>
+                    <h3 class="project_card_title">Zoo Newsletter</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
                         asperiores, et
                         officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe accusantium quis
                         aliquam.</p>
+                    <button class="button_styling"><a href="project3/project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
