--- a/project2/project_page2.html
+++ b/project2/project_page2.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="landingPage_2.css">
-    <link rel="stylesheet" href="projectPages_style.css">
+    <link rel="stylesheet" href="project2_styles.css">
+    <link rel="stylesheet" href="/projectPages_style.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                     <li><a href="#contact_section">CONTACT</a></li>
                     <li></li>
                 </ul>
-                <img src="images/hamburger_icon.png" alt="">
+                <img src="/images/hamburger_icon.png" alt="">
             </nav>
         </div>
     </header>
@@ -44,9 +44,9 @@
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="/images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="/images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="/images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
@@ -66,9 +66,9 @@
             <div class="social_section">
                 <h4>Follow me on Social Media</h4>
                 <div class="social_icons">
-                    <img src="images/fb_icon.png" alt="">
-                    <img src="images/insta_icon.png" alt="">
-                    <img src="images/tik_icon.png" alt="">
+                    <img src="/images/fb_icon.png" alt="">
+                    <img src="/images/insta_icon.png" alt="">
+                    <img src="/images/tik_icon.png" alt="">
                 </div>
             </div>
         </div>
@@ -81,15 +81,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="images/email_icon.png" alt=""></div>
+                    <div><img src="/images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/phone_icon.png" alt=""></div>
+                    <div><img src="/images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/linkedin_icon.png" alt=""></div>
+                    <div><img src="/images/linkedin_icon.png" alt=""></div>
                     <p></p>
                 </div>
             </div>
