--- a/project1/project_page1.html
+++ b/project1/project_page1.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="landingPage_1.css">
-    <link rel="stylesheet" href="projectPages_style.css">
+    <link rel="stylesheet" href="/projectPages_style.css">
+    <link rel="stylesheet" href="project1_style.css">
 </head>
 
 <body>
@@ -44,15 +44,15 @@
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="/images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="/images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="/images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
     <section>
         <div class="login_container">
-            <div class="side_image"><img src="images/basketball.jpg" alt=""></div>
+            <div class="side_image"><img src="/images/basketball.jpg" alt=""></div>
             <div class="login">
                 <h2>Login</h2>
 
@@ -77,15 +77,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="images/email_icon.png" alt=""></div>
+                    <div><img src="/images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/phone_icon.png" alt=""></div>
+                    <div><img src="/images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/linkedin_icon.png" alt=""></div>
+                    <div><img src="/images/linkedin_icon.png" alt=""></div>
                     <p></p>
                 </div>
             </div>
