--- a/project2/project2.html
+++ b/project2/project2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="landingPage_2.css">
+    <link rel="stylesheet" href="project2_styles.css">
 </head>
 
 <body>
@@ -23,9 +23,9 @@
             <div class="social_section">
                 <h4>Follow us on social media!</h4>
                 <div class="social_icons">
-                    <img src="images/fb_icon.png" alt="">
-                    <img src="images/insta_icon.png" alt="">
-                    <img src="images/tik_icon.png" alt="">
+                    <img src="/images/fb_icon.png" alt="">
+                    <img src="/images/insta_icon.png" alt="">
+                    <img src="/images/tik_icon.png" alt="">
                 </div>
             </div>
         </div>
