--- a/project1/project1.html
+++ b/project1/project1.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="landingPage_1.css">
+    <link rel="stylesheet" href="project1_style.css">
 </head>
 
 <body>
     <div class="login_container">
-        <div class="side_image"><img src="images/basketball.jpg" alt=""></div>
+        <div class="side_image"><img src="/images/basketball.jpg" alt=""></div>
         <div class="login">
             <h2>Login</h2>
 
