fixed project 3 mobile

--- a/index.html
+++ b/index.html
@@ -97,13 +97,10 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="images/lion.jpg" alt=""></div>
+                <div class="project_card_img"><img src="images/tiger.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Zoo Newsletter</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
-                        asperiores, et
-                        officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe accusantium quis
-                        aliquam.</p>
+                    <p>An interesting and outdoorsy newsletter sign up for a zoo</p>
                     <button class="button_styling"><a href="project3/project_page3.html">Project Page</a></button>
                 </div>
             </div>
