--- a/project3/project3.html
+++ b/project3/project3.html
@@ -13,12 +13,14 @@
 </head>
 
 <body>
+    <div>
+        <button class="back_btn"><a href="project_page3.html">Go Back to Project Page</a></button>
+    </div>
     <div class="main_container">
-        <div class="rotate"></div>
         <div class="grid">
             <div id="welcome">
                 <div id="text">
-                    <h2>Welcome to the Israel Zoo</h2>
+                    <h2>Get the latest info about the Israel Zoo</h2>
                     <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
                 </div>
 
