--- a/project3/project_page3.html
+++ b/project3/project_page3.html
@@ -8,8 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="project3_style.css">
+    <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/projectPages_style.css">
+    <link rel="stylesheet" href="project3_style.css">
+    
 </head>
 
 <body>
@@ -19,7 +22,7 @@
             <p class="logo">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="/index.html">HOME</a></li>
                     <li><a href="#my_projects">MY PROJECTS</a></li>
                     <li><a href="#contact_section">CONTACT</a></li>
                     <li></li>
@@ -32,8 +35,8 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Zoo Sign Up</p>
-                    <p class=" header_text"">Fun and interesting newsletter sign up for a zoo.</p>
+                <p class="hero_header"">Zoo Newsletter Sign Up</p>
+                    <p class=" header_text">Fun and interesting newsletter sign up for a zoo.</p>
             </div>
             <div>
                 <button class="button_styling">Download the project file</button>
@@ -44,7 +47,7 @@
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="/images/img-HTML.png" alt=""></div>
+            <div class="coding_icons project_icon"><img src="/images/img-HTML.png" alt=""></div>
             <div class="coding_icons"><img src="/images/img-CSS.png" alt=""></div>
             <div class="coding_icons"><img src="/images/img-Bootstrap.png" alt=""></div>
         </div>
@@ -52,7 +55,6 @@
 
     <section>
         <div class="main_container">
-            <div class="rotate"></div>
             <div class="grid">
                 <div id="welcome">
                     <div id="text">
