adjust projects and project pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     ipsam est delectus. Voluptas, repudiandae a! Labore delectus nulla aperiam natus dolor maiores modi
                     sed temporibus, ab laboriosam. Quos cum, reprehenderit similique perferendis sint, alias eius
                     temporibus saepe mollitia vero adipisci nisi impedit, odio pariatur. Neque, amet!</p>
-                <button class="button_styling" id="resume">Download my resume</button>
+                <button class="btn_styling" id="resume">Download my resume</button>
             </div>
             <img src="images/profile pic.jpg" alt="" class="aboutMe_img">
         </div>
@@ -83,7 +83,7 @@
                     <h3 class="project_card_title">Basketball League Login Page</h3>
                     <p> A clean and modern login page for a summer basketball league.
                         <p />
-                        <button class="button_styling"><a href="project1/project_page1.html">Project Page</a></button>
+                        <button class="btn_styling"><a href="project1/project_page1.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -92,16 +92,16 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
                     <p>A sign up page for a a new and exciting coding bootcamp.<p/>
-                    <button class="button_styling"><a href="project2/project_page2.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project2/project_page2.html">Project Page</a></button>
                 </div>
             </div>
 
-            <div class="project_card">
-                <div class="project_card_img"><img src="images/tiger.jpg" alt=""></div>
+            <div class="project_card" id="project_card3">
+                <div class="project_card_img cardimg3"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Zoo Newsletter</h3>
                     <p>An interesting and outdoorsy newsletter sign up for a zoo</p>
-                    <button class="button_styling"><a href="project3/project_page3.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -109,9 +109,8 @@
                 <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 4</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
-                        asperiores, et officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe
-                        accusantium quis aliquam.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -119,10 +118,8 @@
                 <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 5</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
-                        asperiores, et
-                        officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe accusantium quis
-                        aliquam.</>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<p/>
+                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -130,10 +127,8 @@
                 <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 6</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium voluptatibus inventore
-                        asperiores, et
-                        officia perferendis architecto, eum optio perspiciatis veniam magnam, saepe accusantium quis
-                        aliquam.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
                 </div>
             </div>
         </div>
@@ -174,7 +169,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="images/linkedin_icon.png" alt=""></div>
-                    <p></p>
+                    <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
                 </div>
             </div>
         </div>
