--- a/project1/project1.html
+++ b/project1/project1.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
+    
     <div class="login_container">
         <div class="side_image"><img src="/images/basketball.jpg" alt=""></div>
         <div class="login">
-            <h2>Login</h2>
+            <h2>Login to the Summer League!</h2>
 
             <div class="form">
                 <input type="email" placeholder="Email" class="credentials">
