--- a/project2/project2.html
+++ b/project2/project2.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="project2_styles.css">
 </head>
 
-<body>
-    <div class="container">
+<body id="project2_body">
+    <div>
+        <button class="back_btn"><a href="project_page2.html">Go Back to Project Page</a></button>
+    </div>
+    <div class="container cntr_margin">
         <div class="contrast_layer"></div>
         <div class="content">
             <h2 class="lp_content">Come join our coding bootcamp!</h2>
