--- a/project2/project_page2.html
+++ b/project2/project_page2.html
@@ -8,18 +8,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="project2_styles.css">
-    <link rel="stylesheet" href="/projectPages_style.css">
 </head>
 
 <body>
-
     <header id="header_section">
         <div class="header_container">
             <p class="logo">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="/index.html">HOME</a></li>
                     <li><a href="#my_projects">MY PROJECTS</a></li>
                     <li><a href="#contact_section">CONTACT</a></li>
                     <li></li>
@@ -32,12 +31,12 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Summer Basketball League Login</p>
-                    <p class=" header_text"">A simple and clean login page for a summer basketball league.</p>
+                <p class="hero_header"">Coding Course Sign Up</p>
+                    <p class=" header_text"">A sign up for a coding course with a tech feel.</p>
             </div>
             <div>
-                <button class="button_styling">Download the project file</button>
-                <button class="button_styling"><a href="project2.html">View the project page</a></button>
+                <button class="btn_styling">Download the project file</button>
+                <button class="btn_styling"><a href="project2.html">View the project page</a></button>
             </div>
         </div>
     </section>
@@ -50,14 +49,14 @@
         </div>
     </section>
 
-    <section>
-        <div class="container">
-            <div class="contrast_layer"></div>
+    <section class="gray_bg">
+        <div class="coding_bg container ">
+            <div class="project_contrast_layer"></div>
             <div class="content">
-                <h2 class="lp_content">You're in a Good Place to Be!</h2>
-                <p class="lp_content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati molestias non
-                    asperiores vel reiciendis. Numquam aperiam, quia commodi odio ut facere repellat nobis quibusdam
-                    aliquam, cumque cum, est iure voluptates?</p>
+                <h2 class="lp_content">Come join our coding bootcamp!</h2>
+                <p class="lp_content">Learn the latest coding skills with our wide range of course options, from
+                    full-stack
+                    to cybersecurity and everything in between.</p>
                 <form action="" class="lp_form">
                     <input type="text" name="" id="" placeholder="Please type your name" class="form_input">
                     <input type="email" name="" id="" placeholder=" Please type your email" class="form_input">
@@ -90,7 +89,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="/images/linkedin_icon.png" alt=""></div>
-                    <p></p>
+                    <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
                 </div>
             </div>
         </div>
