--- a/project1/project_page1.html
+++ b/project1/project_page1.html
@@ -19,7 +19,7 @@
             <p class="logo">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="/index.html">HOME</a></li>
                     <li><a href="#my_projects">MY PROJECTS</a></li>
                     <li><a href="#contact_section">CONTACT</a></li>
                     <li></li>
@@ -36,8 +36,8 @@
                     <p class=" header_text"">A simple and clean login page for a summer basketball league.</p>
             </div>
             <div>
-                <button class="button_styling">Download the project file</button>
-                <button class="button_styling"><a href="project1.html">View the project page</a></button>
+                <button class="btn_styling">Download the project file</button>
+                <button class="btn_styling"><a href="project1.html">View the project page</a></button>
             </div>
         </div>
     </section>
@@ -50,20 +50,20 @@
         </div>
     </section>
 
-    <section>
-        <div class="login_container">
-            <div class="side_image"><img src="/images/basketball.jpg" alt=""></div>
-            <div class="login">
-                <h2>Login</h2>
+    <section id="project1_section">
+        <div class="project1_container">
+            <div class="project_sideimg"><img src="/images/basketball.jpg" alt=""></div>
+            <div class="project_login">
+                <h2>Login to the Summer League!</h2>
 
-                <div class="form">
+                <div class="project_form">
                     <input type="email" placeholder="Email" class="credentials">
 
                     <input type="password" placeholder="Password" class="credentials" id="passwrd">
 
                     <input type="submit" value="Enter" id="submit">
                 </div>
-                <div class="help">
+                <div class="project_help">
                     <a href="">New User? Create an account.</a>
                     <a href="">Forgot password?</a>
                 </div>
