--- a/project3/project3.html
+++ b/project3/project3.html
@@ -12,34 +12,37 @@
     <link rel="stylesheet" href="project3_style.css">
 </head>
 
-<body>
-    <div>
-        <button class="back_btn"><a href="project_page3.html">Go Back to Project Page</a></button>
-    </div>
-    <div class="main_container">
-        <div class="grid">
-            <div id="welcome">
-                <div id="text">
-                    <h2>Get the latest info about the Israel Zoo</h2>
-                    <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
-                </div>
-
-                <div id="sign_up">
-                    <h2>Sign Up to Our Newsletter</h2>
-                    <div class="inputs">
-                        <input type="text" placeholder="Name" id="info">
-                        <input type"email" name="" id="info" placeholder="Email">
+<body id="project3_body">
+    <section>
+        <div>
+            <button class="back_btn"><a href="project_page3.html">Go Back to Project Page</a></button>
+        </div>
+        <div class="main_container">
+            <div class="grid">
+                <div id="welcome">
+                    <div id="text">
+                        <h2>Get the latest info about the Israel Zoo</h2>
+                        <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
                     </div>
 
-                    <input type="submit" value="Sign Up" id="submit">
-                </div>
-            </div>
+                    <div id="sign_up">
+                        <h2>Sign Up to Our Newsletter</h2>
+                        <div class="inputs">
+                            <input type="text" placeholder="Name" id="info">
+                            <input type"email" name="" id="info" placeholder="Email">
+                        </div>
 
-            <div id="image1"></div>
-            <div id="image2"></div>
-            <div id="image3"></div>
+                        <input type="submit" value="Sign Up" id="submit">
+                    </div>
+                </div>
+
+                <div id="image1"></div>
+                <div id="image2"></div>
+                <div id="image3"></div>
+            </div>
         </div>
-    </div>
+    </section>
+
 </body>
 
 </html>
