--- a/project3/project_page3.html
+++ b/project3/project_page3.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/projectPages_style.css">
     <link rel="stylesheet" href="project3_style.css">
-    
+
 </head>
 
 <body>
@@ -39,8 +39,8 @@
                     <p class=" header_text">Fun and interesting newsletter sign up for a zoo.</p>
             </div>
             <div>
-                <button class="button_styling">Download the project file</button>
-                <button class="button_styling"><a href="project3.html">View the project page</a></button>
+                <button class="btn_styling">Download the project file</button>
+                <button class="btn_styling"><a href="project3.html">View the project page</a></button>
             </div>
         </div>
     </section>
@@ -53,29 +53,28 @@
         </div>
     </section>
 
-    <section>
-        <div class="main_container">
-            <div class="grid">
-                <div id="welcome">
-                    <div id="text">
-                        <h2>Welcome to the Israel Zoo</h2>
-                        <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
-                    </div>
-
-                    <div id="sign_up">
-                        <h2>Sign Up to Our Newsletter</h2>
-                        <input type="text" placeholder="Name" id="info">
-                        <input type="email" name="" id="info" placeholder="Email">
-                        <input type="submit" value="Sign Up" id="submit">
-                    </div>
+    <section class="project_section"">
+        <div class=" green_bg main_container">
+        <div class="grid">
+            <div id="welcome">
+                <div id="text">
+                    <h2>Welcome to the Israel Zoo</h2>
+                    <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
                 </div>
 
-                <div id="image1"></div>
-                <div id="image2"></div>
-                <div id="image3"></div>
+                <div id="sign_up">
+                    <h2>Sign Up to Our Newsletter</h2>
+                    <input type="text" placeholder="Name" id="info">
+                    <input type="email" name="" id="info" placeholder="Email">
+                    <input type="submit" value="Sign Up" id="submit">
+                </div>
             </div>
-        </div>
 
+            <div id="image1"></div>
+            <div id="image2"></div>
+            <div id="image3"></div>
+        </div>
+        </div>
     </section>
 
     <footer>
