--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <h3 class="project_card_title">Basketball League Login Page</h3>
                     <p> A clean and modern login page for a summer basketball league.
                         <p />
-                        <button class="btn_styling"><a href="project1/project_page1.html">Project Page</a></button>
+                        <button class="btn_styling"><a href="project_page1.html">Project Page</a></button>
                 </div>
             </div>
 
