--- a/project_page2.html
+++ b/project_page2.html
@@ -18,12 +18,12 @@
             <p class="logo">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
-                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#my_projects">MY PROJECTS</a></li>
                     <li><a href="#contact_section">CONTACT</a></li>
                     <li></li>
                 </ul>
-                <img src="/images/hamburger_icon.png" alt="">
+                <img src="images/hamburger_icon.png" alt="">
             </nav>
         </div>
     </header>
@@ -43,9 +43,9 @@
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="/images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="/images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="/images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
@@ -65,9 +65,9 @@
                 <div class="social_section">
                     <h4>Follow me on Social Media</h4>
                     <div class="social_icons">
-                        <img src="/images/fb_icon.png" alt="">
-                        <img src="/images/insta_icon.png" alt="">
-                        <img src="/images/tik_icon.png" alt="">
+                        <img src="images/fb_icon.png" alt="">
+                        <img src="images/insta_icon.png" alt="">
+                        <img src="images/tik_icon.png" alt="">
                     </div>
                 </div>
             </div>
@@ -80,15 +80,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="/images/email_icon.png" alt=""></div>
+                    <div><img src="images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="/images/phone_icon.png" alt=""></div>
+                    <div><img src="images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="/images/linkedin_icon.png" alt=""></div>
+                    <div><img src="images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
                 </div>
             </div>
