--- a/project_page2.html
+++ b/project_page2.html
@@ -44,7 +44,7 @@
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
             <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-CSS.png"
             <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
