--- a/project_page1.html
+++ b/project_page1.html
@@ -19,7 +19,7 @@
             <p class="logo">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
-                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#my_projects">MY PROJECTS</a></li>
                     <li><a href="#contact_section">CONTACT</a></li>
                     <li></li>
@@ -33,7 +33,7 @@
         <div class="hero_box">
             <div class="hero_text">
                 <p class="hero_header"">Summer Basketball League Login</p>
-                    <p class=" header_text"">A simple and clean login page for a summer basketball league.</p>
+                    <p class="header_text"">A simple and clean login page for a summer basketball league.</p>
             </div>
             <div>
                 <button class="btn_styling">Download the project file</button>
@@ -44,15 +44,15 @@
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="/images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="/images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="/images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
     <section id="project1_section">
         <div class="project1_container">
-            <div class="project_sideimg"><img src="/images/basketball.jpg" alt=""></div>
+            <div class="project_sideimg"><img src="images/basketball.jpg" alt=""></div>
             <div class="project_login">
                 <h2>Login to the Summer League!</h2>
 
@@ -77,15 +77,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="/images/email_icon.png" alt=""></div>
+                    <div><img src="images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="/images/phone_icon.png" alt=""></div>
+                    <div><img src="images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="/images/linkedin_icon.png" alt=""></div>
+                    <div><img src="images/linkedin_icon.png" alt=""></div>
                     <p></p>
                 </div>
             </div>
