--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
                     <p>A sign up page for a a new and exciting coding bootcamp.<p/>
-                    <button class="btn_styling"><a href="project2/project_page2.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project_page2.html">Project Page</a></button>
                 </div>
             </div>
 
