--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=Vast+Shadow&display=swap"
+        rel="stylesheet">
 </head>
 
 <body id="home">
 
     <header id="header_section">
         <div class="header_container">
-            <p class="logo">Simcha Lapp</p>
+            <p class="logo vast-shadow-regular">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
                     <li><a href="#home">HOME</a></li>
@@ -35,8 +37,8 @@
             </div>
 
             <div class="hero_text">
-                <p class="hero_header"">Welcome To My Portfolio</p>
-                <p class=" header_text"">Here you will find information about me, past projects I have worked on,
+                <p class="hero_header vast-shadow-regular">Welcome To My Portfolio</p>
+                <p class="header_text vast-shadow-regular">Here you will find information about me, past projects I have worked on,
                     and be able to reach out and contact me in case you want to work together. Looking foward to hearing
                     from you!</p>
             </div>
@@ -101,7 +103,7 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Zoo Newsletter</h3>
                     <p>An interesting and outdoorsy newsletter sign up for a zoo</p>
-                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -110,7 +112,7 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 4</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project4.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -119,7 +121,7 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 5</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<p/>
-                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
