--- a/project_page3.html
+++ b/project_page3.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="/images/linkedin_icon.png" alt=""></div>
-                    <p></p>
+                    <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
                 </div>
             </div>
         </div>
