--- a/project_page3.html
+++ b/project_page3.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/projectPages_style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="projectPages_style.css">
     <link rel="stylesheet" href="project3_style.css">
 
 </head>
@@ -22,12 +22,12 @@
             <p class="logo">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
-                    <li><a href="/index.html">HOME</a></li>
+                    <li><a href="index.html">HOME</a></li>
                     <li><a href="#my_projects">MY PROJECTS</a></li>
                     <li><a href="#contact_section">CONTACT</a></li>
                     <li></li>
                 </ul>
-                <img src="/images/hamburger_icon.png" alt="">
+                <img src="images/hamburger_icon.png" alt="">
             </nav>
         </div>
     </header>
@@ -47,9 +47,9 @@
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons project_icon"><img src="/images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="/images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="/images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons project_icon"><img src="images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
@@ -81,15 +81,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="/images/email_icon.png" alt=""></div>
+                    <div><img src="images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="/images/phone_icon.png" alt=""></div>
+                    <div><img src="images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="/images/linkedin_icon.png" alt=""></div>
+                    <div><img src="images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
                 </div>
             </div>
