responsiveness of project 1

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="home">
 
     <header id="header_section">
-        <div class="header_container">
+        <div class="header_container vast-shadow-regular">
             <p class="logo vast-shadow-regular">Simcha Lapp</p>
             <nav class="nav">
                 <ul>
@@ -38,7 +38,8 @@
 
             <div class="hero_text">
                 <p class="hero_header vast-shadow-regular">Welcome To My Portfolio</p>
-                <p class="header_text vast-shadow-regular">Here you will find information about me, past projects I have worked on,
+                <p class="header_text vast-shadow-regular">Here you will find information about me, past projects I have
+                    worked on,
                     and be able to reach out and contact me in case you want to work together. Looking foward to hearing
                     from you!</p>
             </div>
@@ -83,7 +84,7 @@
 
                 <div class="project_card_text">
                     <h3 class="project_card_title">Basketball League Login Page</h3>
-                    <p> A clean and modern login page for a summer basketball league.
+                    <p> A youthful and fun login page for a summer basketball league.
                         <p />
                         <button class="btn_styling"><a href="project_page1.html">Project Page</a></button>
                 </div>
@@ -93,8 +94,9 @@
                 <div class="project_card_img"><img src="images/coding_background.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
-                    <p>A sign up page for a a new and exciting coding bootcamp.<p/>
-                    <button class="btn_styling"><a href="project_page2.html">Project Page</a></button>
+                    <p>A sign up page for a new and exciting coding bootcamp.
+                        <p />
+                        <button class="btn_styling"><a href="project_page2.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -108,10 +110,10 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
+                <div class="project_card_img cardimg4"><img src="images/money1.jpg" alt=""></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 4</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <h3 class="project_card_title">Currency Exchange</h3>
+                    <p>Modern and clean sign in for an online currrency exchange.</p>
                     <button class="btn_styling"><a href="project4.html">Project Page</a></button>
                 </div>
             </div>
@@ -120,8 +122,9 @@
                 <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 5</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.<p/>
-                    <button class="btn_styling"><a href="project_page3.html">Project Page</a></button>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        <p />
+                        <button class="btn_styling"><a href="project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
