--- a/project4.html
+++ b/project4.html
@@ -11,8 +11,8 @@
 </head>
 </head>
 
-<body>
-    <div class="container p-0 d-flex align-items-center mt-5 shadow-lg">
+<body class="bg-white">
+    <div class="container p-0 d-flex align-items-center mt-5 shadow-lg main_ctr">
         <div id="carouselExampleAutoplaying" class="w-75 carousel slide carousel-fade pictures" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
