--- a/project_page1.html
+++ b/project_page1.html
@@ -52,7 +52,7 @@
 
     <section id="project1_section">
         <div class="project1_container">
-            <div class="project_sideimg"><img src="images/basketball.jpg" alt=""></div>
+            <div class="project_sideimg"></div>
             <div class="project_login">
                 <h2>Login to the Summer League!</h2>
 
@@ -78,7 +78,7 @@
             <div class="footer_box">
                 <div class="footer_items">
                     <div><img src="images/email_icon.png" alt=""></div>
-                    <p>slapp62@gmail.com</p>
+                    <p class="">slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
                     <div><img src="images/phone_icon.png" alt=""></div>
